--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -9,10 +9,12 @@
   <link rel="icon" href="/favicon.png" type="image/x-icon">
   <script src="https://cdn.bootcss.com/rollbar.js/2.4.0/rollbar.min.js"></script>
   <script src="https://gw.alipayobjects.com/os/antv/assets/data-set/0.8.7/data-set.min.js"></script>
+  {{ helper.assets.getStyle() | safe }}
 </head>
 
-<body class="antd">
+<body class="egg">
   <div id="root"></div>
+  {{ helper.assets.getScript() | safe }}
 </body>
 
 </html>
